# AdventCode

./: .gitignore  Readme.md
2016/day01/: andsanmar.hs
2016/day02/: andsanmar  andsanmar.rs  input
2016/day03/: andsanmar  andsanmar.rs  andsanmar.rs~  day3.rs~
2017/day05/: andsanmar.py
2017/day07/: andsanmar.py  andsanmar.result  andsanmar_2.py  input
2017/day11/: andsanmar.py
2017/day13/: andsanmar.py
2017/day14/: andsanmar.py
2017/day15/: andsanmar.py
2017/day16/: input
2017/day17/: andsanmar.py
2018/day02/: andsanmar.hs  andsanmar.input
2018/day03/: andsanmar.hs
2018/day07/: andsanmar.hs
2018/day09/: andsanmar.hs
2018/day10/: andsanmar.hs
2018/day12/: andsanmar.hs
2018/day13/: andsanmar.hs
2019/day01/: input
2019/day02/: day2.go
2020/day01/: andsanmar.rs
2020/day02/: andsanmar.rs
2020/day03/: andsanmar.rs
2020/day04/: andsanmar.rs
2020/day06/: andsanmar.rs
2020/day07/: andsanmar.rs
2020/day08/: andsanmar.rs
2020/day09/: andsanmar.rs
2020/day10/: andsanmar.rs
2020/day11/: andsanmar.rs
2020/day12/: andsanmar.rs
2020/day13/: andsanmar.rs
2020/day14/: andsanmar.rs
2020/day15/: andsanmar.rs
2020/day16/: andsanmar.rs
2020/day17/: andsanmar_1.rs  andsanmar_2.rs
2020/day18/: andsanmar.rs
2020/day19/: andsanmar.rs
2020/day20/: andsanmar.rs
2020/day21/: andsanmar.rs
2020/day22/: andsanmar.rs
2020/day23/: andsanmar.rs
2020/day24/: andsanmar.rs
2020/day25/: andsanmar.rs
2021/day01/: andsanmar.rs
2023/andsanmar/: Cargo.toml
2023/andsanmar/src/: day01.rs
day1/: README.org
(+975 files in other folders)
